# tdtp-framework

./: .dockerignore  .funcfinder.config  .gitignore  .gitleaks.toml  .golangci.yml  AGENTS.md  ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  CLI_IMPLEMENTATION_PLAN.md  CLI_REFACTORING_PLAN.md  DELIVERY_REPORT.md  DOCKER_ENV.md  IMPLEMENTATION_PLAN_v1.2.md  INSTALLATION_GUIDE.md  PROJECT_STATUS_v1.1.md  PR_DESCRIPTION.md  README.md  README_ru.md  ROADMAP.md  TDTP_v0.5_SUMMARY.md  TDTP_v0.6_SUMMARY.md  TDTP_v0.7_SUMMARY.md  TODO_NEXT.md  USE_CASES.md  WEBSITE_ASSISTANT_PLAN.md  access_delo19.yaml  au-ex.yaml  config.mssql.yaml  config.postgres.yaml  config.sqlite-import.yaml  config.yaml  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.mssql.yml  docker-compose.yml  export_delo19.ps1  fix_and_import.py  gen_dbml.vbs  gen_mermaid.vbs  (+28 more)
benchmarks/: Makefile  README.md
bindings/python/: .gitignore  DEVELOPER_GUIDE.md  Makefile  pyproject.toml
bindings/python/tdtp/: __init__.py  _loader.py  _structs_d.py  api_d.py  api_j.py  arrow_ext.py  exceptions.py  facade.py  pandas_ext.py  py.typed
bindings/python/tests/: conftest.py  test_api_d.py  test_api_j.py  test_arrow.py  test_bench.py  test_examples.py  test_facade.py  test_pandas.py
bindings/python/tests/testdata/: .gitignore  dept_emp_compact.tdtp.xml  specials.tdtp.xml  users.tdtp.xml  users.tdtp.xml.csv  users_compressed.tdtp.xml  users_nullable.tdtp.xml  users_special_values.tdtp.xml
configs/: README.md  config.example.yaml  config.mssql.yaml  config.postgres.yaml
deployments/: README.md
docs/: ACCESS_ADAPTER.md  ARCHITECTURE_ANALYSIS.md  BENCHMARKS.md  CLI_BROKER_GUIDE.md  CLI_v1.2_FEATURES.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  ETL_PIPELINE.md  ETL_PIPELINE_GUIDE.md  INTERFACE_PROFILES.md  MIGRATION_STATUS.md  MODULES.md  MSSQL_2012_COMPATIBILITY.md  MSSQL_COMPATIBILITY_MODES.md  MSSQL_DEV_VS_PROD.md  MSSQL_IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR_SCENARIOS.md  PACKET_MODULE.md  POSTGRES_TESTING_GUIDE.md  PRIMARY_AUDIT_TEST_READINESS.md  QUICK_START_TESTING.md  README.md  REFACTORING_ROADMAP.md  S3_AS_SYNC_BROKER.md  SCENARIO_TRUST.md  SCHEMA_MODULE.md  SESSION_SUMMARY.md  SETUP_MSSQL.md  SPECIFICATION.md  SQLITE_ADAPTER.md  SQLITE_MIGRATION_RESULTS.md  TEST_PLAN.md  (+8 more)
(+707 files in other folders)
