[project]
name = "tdtp"
version = "0.1.0"
description = "Python bindings for the TDTP framework (JSON + Direct ctypes APIs)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []          # zero runtime dependencies — only ctypes (stdlib)

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tdtp*"]

# libtdtp.so must be present in the tdtp/ directory at install time.
# For development: run `make build-lib` in this directory first.
[tool.setuptools.package-data]
tdtp = ["*.so", "*.dll", "*.dylib"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
markers   = ["benchmark: mark test as a benchmark"]
