[project]
name = "tdtp"
# Kept in sync with pkg/core/version/version.go via `make sync-version`.
# The authoritative runtime version is tdtp.__version__ (read from J_GetVersion).
version = "1.9.6"
description = "Python bindings for the TDTP framework (JSON + Direct ctypes APIs)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []          # zero runtime dependencies — only ctypes (stdlib)

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
arrow  = ["pyarrow>=10.0"]
all    = ["pandas>=1.3", "pyarrow>=10.0"]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pandas>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tdtp*"]

# libtdtp.so must be present in the tdtp/ directory at install time.
# For development: run `make build-lib` in this directory first.
# py.typed marks the package as typed (PEP 561) so the inline annotations
# are visible to type checkers and agent tooling.
[tool.setuptools.package-data]
tdtp = ["*.so", "*.dll", "*.dylib", "py.typed"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
markers   = ["benchmark: mark test as a benchmark"]
